Fix formatting and spelling in Jupyter notebook

--- a/02.NumPy/02.Array_attributes_methods.ipynb
+++ b/02.NumPy/02.Array_attributes_methods.ipynb
@@ -150,8 +150,8 @@
     "print(np_2d_int_array.astype(float))  #[[2. 3.],[1. 3.],[4. 5.]]\n",
     "print(np_2d_str_array.astype(int))   # [[1 3 4],[4 5 0],[4 5 7]]\n",
     "\n",
-    "# 4. Mathmatical operations like Sum, Mean, Max, Min, index of Min/Max\n# Note: we can use axis=0 or axis=1 to change how operation will work (rowwise/colwise)
-\n",
+    "# 4. Mathmatical operations like Sum, Mean, Max, Min, index of Min/Max\n",
+    "# Note: we can use axis=0 or axis=1 to change how operation will work (rowwise/colwise)\n",
     "print(np_2d_int_array.sum())  # 18 -> sum of al elements in array (any diamension)\n",
     "print(np_2d_int_array.mean()) # 3.0 -> avarage/mean of all elemets (any diamension)\n",
     "print(np_2d_int_array.min())  # min in array\n",
