Fix formatting and add shallow copy example

--- a/02.NumPy/02.Array_attributes_methods.ipynb
+++ b/02.NumPy/02.Array_attributes_methods.ipynb
@@ -169,7 +169,9 @@
     "\n",
     "# 6.Copy\n",
     "copy_array=np_2d_str_array.copy()\n",
-    "print(copy_array)\n",
+    "print(copy_array)\n\n",
+     "shallow_copy=np_2d_str_array.view()    # shallow copy -> changes will reflect in original array \n",
+     "print(shallow_copy)",
     "\n",
     "\n"
    ]
