--- a/03.Pandas/01.Pandas_DataStructures.ipynb
+++ b/03.Pandas/01.Pandas_DataStructures.ipynb
@@ -11,7 +11,7 @@
     "\n",
     "- Mainly there are two Series and DataFrame which resembles to list and 2d array respectively, but internally these are made efficient hence suitable for machine learning and AI\n",
     "\n",
-    "- Whole pandas is basically working with these two datastucture and learning methods and operation on it."
+    "- Whole pandas is basically working with these two datastructure and learning methods and operation on it."
    ]
   },
   {
